--- a/贡献方法.md
+++ b/贡献方法.md
@@ -4,7 +4,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 
 电脑前的您请不要吝啬，您的作品一旦被合并至该仓库中，有可能会被无数学弟学妹仰慕。我们需要您的 PR！
 
-如果您希望匿名贡献，可以 email 至计算学部金牌讲师团邮箱，注明邮件主题即可：jsxbjpjst@126.com
+如果您希望匿名贡献，可以 email 至hitopencs@outlook.com
 
 注：由于本仓库未启用 `git-lfs`，因此请不要上传单个超过 100M 的文件，否则 Commit 无效，Web端只适合 25M 以下小文件。
 
@@ -23,9 +23,7 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 4. 提交 Pull requests
    * 提交 PR：上传完文件到个人仓库之后，点击 `Pull Request` 即可。请留意一下项目的文件组织和命名规范。
 
-   * 也可以直接附加在 [Issue](https://github.com/HIT-FC-OpenCS/CS_Courses/issues/new) 中，由维护者进行添加。
-
-对 Github Pull requests 不熟悉的同学，可以查阅[如何参与开源项目](https://github.com/firstcontributions/first-contributions/blob/main/translations/README.zh-cn.md)中的流程
+   * 也可以直接附加在 [Issue](https://github.com/HIT-OpenCS/CS_Courses/issues/new) 中，由维护者进行添加。
 
 ## :bulb: 目录组织与命名规范 | Directory organization and naming conventions
 
@@ -80,4 +78,4 @@ Issue、PR、纠错、复习资料、学习笔记、选课/考试攻略，完全
 - 与成绩考核相关的作业答案与实验代码，但鼓励上传作业中的难题思路和大实验的代码思路
 - 不应公开的历年考题试卷
 
-如果您认为本仓库的一些文件侵犯了您的权益，请[向我们发送邮件](jsxbjpjst@126.com) 。我们将会从仓库中彻底清除这些文件。
+如果您认为本仓库的一些文件侵犯了您的权益，请[向我们发送邮件](hitopencs@outlook.com) 。我们将会从仓库中彻底清除这些文件。
